<resources>
    <string name="app_name">Calories 1.1.23</string>
    <string name="phone_hint">+7 (___) ___-__-__</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="enter">Войти</string>
    <string name="password">Пароль</string>
    <string name="not_register">Еще не зарегистрированы?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="already_register">Уже зарегистрированы?</string>
    <string name="policy_agreement">С обработкой персональных данных согласен</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="add_activity">Добавить активность</string>
    <string name="add_food">Добавить еду</string>
    <string name="goal_burn_cal">Цель дефицита килокалорий:</string>
    <string name="burned_cal">Сожжено килокалорий:</string>
    <string name="eaten_cal">Потребил килокалорий:</string>
    <string name="sing_out">Выйти</string>
    <string name="menu">Меню</string>
    <string name="a_logo_of_the_app">A logo of the app</string>
    <string name="auth_data_not_correct">Данные для авторизации не могут быть пустыми</string>
    <string name="user_not_found">Пользователь не найден.</string>
    <string name="password_is_wrong">Пароль неверен.</string>
    <string name="policy_must_be_accepted">Примите, пожалуйста, политику обработки данных</string>
    <string name="fields_have_to_be_filled">Все поля должны быть заполнены.</string>
    <string name="passwords_are_not_equal">Пароли не совпадают.</string>
    <string name="user_was_found">Пользователь уже найден! Авторизуйтесь, пожалуйста!</string>
    <string name="sing_out_help">Для разоавторизации нажмите кнопку \'Выйти\'</string>
    <string name="sing_in_help">Для авторизации введите данные выше или перейдите на страницу регистрации</string>
    <string name="registration_help">Для регистрации введите данные выше или перейдите на страницу авторизации</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The diploma project</string>
    <string name="nav_header_subtitle">glushkov1997@icloud.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="action_sing_out">Выйти</string>
    <string name="title_activity_main_display">MainDisplayActivity</string>

    <string name="menu_home">Главный экран</string>
    <string name="menu_user_data">Данные для расчета</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_support">Поддержка</string>
    <string name="menu_weight_data">Данные изменения тела</string>
    <string name="menu_food_data">Данные по питанию</string>
    <string name="menu_activity_data">Данные по активностям</string>
    <string name="menu_imt_calculating">ИМТ</string>
    <string name="menu_extra_weight_in_cal">Превышение веса в ккал</string>
    <string name="menu_bazal_met">Базальный метаболизм</string>
    <string name="menu_day_has_to_free_cal">Ежедн. дефицит ккал</string>
    <string name="menu_about_app">О приложении</string>
    <string name="add_activity_text">Добавление активности</string>
    <string name="add_name_activity">Наименование активности</string>
    <string name="add_activity_time_of_exec">Время выполнения, мин</string>
    <string name="add_activity_btn_text">Добавить активность</string>
    <string name="add_activity_burned_cal">Израсходовано ккал</string>
    <string name="data">Дата</string>
    <string name="qwe_text">Кол-во (текст)</string>
    <string name="carb">Углеводы, гр</string>
    <string name="fat">Жиры, гр</string>
    <string name="protein">Белки, гр</string>
    <string name="calories">Калорийность, ккал</string>
    <string name="food_name">Наименование еды</string>
    <string name="record_food">Записать eду</string>
    <string name="notice_food_min_validation">Заполните, пожалуйста, наименование еды, калорийность</string>
    <string name="notice_sport_min_validation">Заполните, пожалуйста, все поля</string>
    <string name="notice_food_cal_validation">Введите целое число калорийности</string>
    <string name="notice_food_validation">Введите числа для БЖУ и Калорийности</string>
    <string name="about_app_text">Концепция и основная идея \n\n Приложение служит для подсчета и контроля ежедневных энергозатрат организма. Пользователь с помощью приложения может рассчитать норму своего базального метаболизма и провести индекс массы тела (рассчитать процент лишнего веса в организме). В результате приложение поможет рассчитать количество лишнего веса, и предложить нормы ежедневных энергозатрат для снижения желаемого количества лишнего веса в заданный срок. Энергозатраты можно увеличить за счет добавления физической активности. Приложение будет иметь базу физических активностей с их весами в килокалориях. Пользователь сможет наглядно видеть сколько энергии (ккал) он уже сегодня потребил и сколько требуется для достижения желаемых результатов. \n\n\n Задачи, решаемые с помощью приложения\n\n 1. Рассчитать количество процента лишнего веса в организме пользователя (индекс массы тела, далее ИМТ). \n 2. Рассчитать примерную массу лишнего веса в организме в килограммах, и этот же вес кг. перевести в килокалории. В итоге получим общую сумму лишних килокалорий, которые нужно израсходовать. \n 3. Рассчитать базальный метаболизм (это затраты калорий в состоянии покоя без учета физической активности). \n 4. Рассчитать какой дефицит калорий в день нужно создать, чтобы сжигать N% лишнего веса в день.</string>
    <string name="email_support_validation">Введите сообщение и тему письма, пожалуйста</string>
    <string name="my_email">glushkov1997@icloud.com</string>
    <string name="telegram_link">https://tlgg.ru/good_gis</string>
    <string name="vk_link">https://vk.com/good_gis</string>
    <string name="user_data_validation">Заполните, пожалуйста, все поля для выполения точного расчета</string>
    <string name="dialog_change_imt_text">Вы действительно хотите изменить расчитанный ИМТ? Если да укажите, новый ИМТ ниже.</string>
    <string name="dialog_change_imt_title">Изменить ИМТ</string>
    <string name="imt_validation">Заполните, пожалуйста, данные пользователя в соответствующем разделе.</string>
    <string name="imt_change_validation">Введите, пожалуйста, новый ИМТ</string>
    <string name="weight_validation_text">Введите, пожалуйста, данные о весе в разделе \'Данные пользователя\'</string>
    <string name="imt_validation_text">Введите, пожалуйста, данные о ИМТ в разделе \'Расчет ИМТ\'</string>
    <string name="age_validation_text">Введите, пожалуйста, данные о возрасте в разделе \'Расчет ИМТ\'</string>
    <string name="height_validation_text">Введите, пожалуйста, данные о росте в разделе \'Расчет ИМТ\'</string>
    <string name="kg_validation_text">Введите, пожалуйста, цель кг</string>
    <string name="day_validation_text">Введите, пожалуйста, кол-во дней до достижения цели</string>
    <string name="basal_met_validation_text">Расчитайте, пожалуйста, базальный метаболизм в одноименном разделе</string>
    <string-array name="activityOfUser">
        <item>сидячий образ жизни</item>
        <item>легкая нагрузка 1–3 раза в неделю</item>
        <item>тренировки 3–5 раз в неделю</item>
        <item>тренировки ежедневно</item>
        <item>тяж.физическая работа/трен.2 раза в день</item>
    </string-array>


</resources>