<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFoodActivity">


  <Button
      android:id="@+id/addFoodBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/record_food"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/foodQty" />

  <EditText
      android:id="@+id/foodName"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/food_name"
      android:inputType="text"
      android:textAlignment="viewStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/foodDate" />

  <EditText
      android:id="@+id/foodCal"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/calories"
      android:inputType="numberDecimal"
      android:textAlignment="viewStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/foodName" />

  <EditText
      android:id="@+id/foodProtein"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/protein"
      android:inputType="numberDecimal"
      android:textAlignment="viewStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/foodCal" />

  <EditText
      android:id="@+id/foodFat"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/fat"
      android:inputType="numberDecimal"
      android:textAlignment="viewStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/foodProtein" />

  <EditText
      android:id="@+id/foodCarb"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/carb"
      android:inputType="numberDecimal"
      android:textAlignment="viewStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/foodFat" />

  <EditText
      android:id="@+id/foodQty"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="@string/qwe_text"
      android:inputType="text"
      android:textAlignment="viewStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/foodCarb" />

  <EditText
      android:id="@+id/foodDate"
      android:layout_width="280dp"
      android:layout_height="60dp"
      android:layout_marginTop="116dp"
      android:ems="10"
      android:hint="@string/data"
      android:inputType="date|none"
      android:textAlignment="viewStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>