<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:layout_editor_absoluteX="-17dp"
    tools:layout_editor_absoluteY="-49dp">

    <Button
        android:id="@+id/submitBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add_activity"
        app:layout_constraintBottom_toTopOf="@+id/addFood"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addFood"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="92dp"
        android:text="@string/add_food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/goalBurnCalories"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="41dp"
        android:indeterminate="false"
        android:progressBackgroundTint="#0044F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalBurnCaloriesText" />

    <TextView
        android:id="@+id/goalBurnCaloriesText"
        android:layout_width="217dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="564dp"
        android:text="@string/goal_burn_cal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/burnedCaloriesText"
        android:layout_width="217dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="11dp"
        android:text="@string/burned_cal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/burnedCalories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalBurnCalories"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/eatenCaloriesText"
        android:layout_width="217dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="41dp"
        android:text="@string/eaten_cal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/eatenCalories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burnedCalories"
        app:layout_constraintVertical_bias="0.555" />

    <ProgressBar
        android:id="@+id/eatenCalories"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="339dp"
        android:indeterminate="false"
        android:progressBackgroundTint="#45E800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/burnedCalories"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/burnedCalories"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="441dp"
        android:indeterminate="false"
        android:progressBackgroundTint="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalBurnCalories"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/singOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sing_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="200dp"
        android:text="@string/menu"
        app:layout_constraintEnd_toStartOf="@+id/singOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>